2000-06-15  H.J. Lu  <hjl@gnu.org>

	* sort.h: New file. Imported from gcc.
	* dyn-string.h: Likewise.

	* hashtab.h: Updated from gcc.
	* demangle.h: Likewise.

Tue May 30 16:53:34 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* floatformat.h (struct floatformat): Add field name.

2000-05-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* filenames.h: New file.
	(HAVE_DOS_BASED_FILE_SYSTEM, IS_DIR_SEPARATOR)
	(IS_ABSOLUTE_PATH, FILENAME_CMP): New macros.

2000-05-17  S. Bharadwaj Yadavalli  <sby@scrugs.lkg.dec.com>
	    Rick Gorton	            <gorton@scrugs.lkg.dec.com>
	    
	* bfdlink.h (struct bfd_link_info): Add emitrelocations flag.

2000-05-08  Alan Modra  <alan@linuxcare.com.au>

	* dis-asm.h (print_insn_tic54x): Declare.

Fri May  5 16:51:03 2000  Clinton Popetz  <cpopetz@cygnus.com>

	* coff/rs6k64.h (U802TOC64MAGIC): Change to U803XTOCMAGIC.

Mon Apr 24 15:20:51 2000  Clinton Popetz  <cpopetz@cygnus.com>

	* include/coff/rs6k64.h: New file.

Fri Apr 21 13:20:53 2000  Richard Henderson  <rth@cygnus.com>
			  David Mosberger  <davidm@hpl.hp.com>

	* dis-asm.h (print_insn_ia64): Declare.

2000-04-05  Richard Henderson  <rth@cygnus.com>

	* splay-tree.h (splay_tree_remove): Declare.

2000-04-04  Alan Modra  <alan@linuxcare.com.au>

	* bin-bugs.h (REPORT_BUGS_TO): Remove translated part.

2000-04-03  Alan Modra  <alan@linuxcare.com.au>

	* bin-bugs.h: New file.

2000-03-27  Denis Chertykov  <denisc@overta.ru>

	* dis-asm.h (print_insn_avr): Declare.

2000-03-14  Bernd Schmidt  <bernds@cygnus.co.uk>

	* hashtab.h (htab_trav): Modify type so that first arg is of type
	void **.
	(htab_find_with_hash, htab_find_slot_with_hash): Declare new
	functions.

2000-03-09  Alex Samuel  <samuel@codesourcery.com>

	* partition.h: New file.

2000-03-09  Zack Weinberg  <zack@wolery.cumb.org>

	* hashtab.h (struct htab): Add del_f.
	(htab_del): New type.
	(htab_create): Add fourth argument.

2000-03-08  Zack Weinberg  <zack@wolery.cumb.org>
