@@ -1,3 +1,7 @@
+2000-06-17  H.J. Lu  <hjl@gnu.org>
+
+	* ansidecl.h: Updated from gcc.
+
 2000-06-15  H.J. Lu  <hjl@gnu.org>
 
 	* sort.h: New file. Imported from gcc.
